--- a/index.html
+++ b/index.html
@@ -188,9 +188,9 @@
   <div class="form-group">
     <label for="exampleFormControlSelect1">Example select</label>
     <select class="form-control" id="exampleFormControlSelect1">
-      <option>1</option>
-      <option>2</option>
-      <option>3</option>
+      <option>Php</option>
+      <option>Oracle</option>
+      <option>Android</option>
       <option>4</option>
       <option>5</option>
     </select>
