add aboute page

--- a/index.html
+++ b/index.html
@@ -81,13 +81,14 @@
 <!-- Image and text -->
 <!-- <div class="row"></div> -->
 <!-- fixed-top -->
-<img class="position-absolute" src="images/behind.jpg" height="1000" width="120">
+
+<img class="position-fixed" src="images/behind.jpg" height="1000" width="120">
 <img class="pos " src="images/log3.jpg" height="120" width="120">
 <img class="position-fixed " src="images/log3.jpg" height="120" width="120">
 <img class="book " src="images/books.jpg" height="1000" width="120">
 
 
-<nav class=" container navbar  ">
+<nav class=" container navbar">
   <a class="navbar-brand" href="file:///C:/Users/ali/Desktop/New%20folder%20(6)/index.html#">
     <img src="images/log3.jpg" width="30" height="30" class="d-inline-block align-top" alt="">
   <span class="ffam">Fictions Academy</span>
@@ -105,7 +106,7 @@
   </div>
 </div>
 
-<div ><a href="" class="navbar-brand"><span class="ffam ">About</span></a></div> 
+<div><a href="file:///C:/Users/ali/Desktop/my%20E-com%20of%20website/mypro/about.html" class="navbar-brand ffam ">  About</a></div> 
 <div class=""><a href="" class="navbar-brand"><span class="ffam">Contact Us</span></a></div>
 </nav>
 
@@ -128,9 +129,24 @@
 		  <img src="images/pic_prog.jpg" height="395" width="100%"></div>
 		  <div  class="back c1">
 		   <div class="row">
-		  	<div class="col-4"><h3><img src="images/log3.jpg" width="30" height="30"><span class="ffam">php course</span></h3></div>
-		  	<div class="col-4"><h3><img src="images/log3.jpg" width="30" height="30"><span class="ffam">Android course</span></h3></div>
-		  	<div class="col-4"><h3><img src="images/log3.jpg" width="30" height="30"><span class="ffam">Oraqle course</span></h3></div>
+		  	<div class="col-4">
+		  		<h3>
+		  			<img src="images/log3.jpg" width="30" height="30">
+		  			<span class="ffam">php course</span>
+
+		  		</h3>
+		  	</div>
+		  	<div class="col-4"><h3>
+		  		<img src="images/log3.jpg" width="30" height="30">
+		  		<span class="ffam">Android course</span>
+		  	</h3>
+
+		  	</div>
+		  	<div class="col-4"><h3>
+		  		<img src="images/log3.jpg" width="30" height="30">
+		  		<span class="ffam">Oraqle course</span>
+		  	</h3>
+		  </div>
 		  </div>
 		  <!-- <img  src="img/a.png" alt="Avatar" height="150" width="250"></div> -->
   </div></div>
@@ -210,6 +226,22 @@
     <textarea class="form-control" id="exampleFormControlTextarea1" rows="3"></textarea>
   </div>
 </form>
-
+ <dir class="container">
+<footer class=" row  mt-5 text-white">
+	<div class="col-3"><h5>FICTIONACADEMY</h5>
+     <a href="file:///C:/Users/ali/Desktop/my%20E-com%20of%20website/mypro/Aboute.html" class="text-decoration-none text-white bg-dark ">Aboute</a><br>
+      <a href="" class=" text-decoration-none text-white bg-dark ">For Business</a>
+      <br>
+      <a href="" class=" text-decoration-none text-white bg-dark ">Shope</a>
+      <br>
+      <a href="" class=" text-decoration-none text-white bg-dark ">Stories</a>
+      <br>
+      <a href="" class=" text-decoration-none text-white bg-dark ">For Business</a>
+	</div>
+	<div class="col-3"><h5>CATALOG</h5></div>
+	<div class="col-3"></div>
+	<div class="col-3"></div>
+</footer>
+</dir>
 </body>
 </html>
