--- a/index.html
+++ b/index.html
@@ -89,9 +89,9 @@
 
 
 <nav class=" container navbar">
-  <a class="navbar-brand" href="file:///C:/Users/ali/Desktop/New%20folder%20(6)/index.html#">
+  <a class="navbar-brand" href="file:///C:/Users/ali/Desktop/my%20E-com%20of%20website/mypro/index.html">
     <img src="images/log3.jpg" width="30" height="30" class="d-inline-block align-top" alt="">
-  <span class="ffam">Fictions Academy</span>
+  <span class="ffam">Fictions|Academy</span>
   </a>
 
 
@@ -106,7 +106,7 @@
   </div>
 </div>
 
-<div><a href="file:///C:/Users/ali/Desktop/my%20E-com%20of%20website/mypro/about.html" class="navbar-brand ffam ">  About</a></div> 
+<div><a href="file:///C:/Users/ali/Desktop/my%20E-com%20of%20website/mypro/Aboute.html" class="navbar-brand ffam ">  Aboute</a></div> 
 <div class=""><a href="" class="navbar-brand"><span class="ffam">Contact Us</span></a></div>
 </nav>
 
