--- a/Aboute.html
+++ b/Aboute.html
@@ -21,7 +21,7 @@
 <img class="position-fixed " src="images/log3.jpg" height="120" width="120">
 <img class="book " src="images/books.jpg" height="1000" width="120">
 
-<nav class=" container navbar">
+<nav class="bg-warning container navbar">
   <a class="navbar-brand" href="file:///C:/Users/ali/Desktop/my%20E-com%20of%20website/mypro/index.html">
     <img src="images/log3.jpg" width="30" height="30" class="d-inline-block align-top" alt="">
   <span class="ffam">FictionsAcademy</span>
@@ -43,7 +43,7 @@
 <div class=""><a href="" class="navbar-brand"><span class="ffam">Contact Us</span></a></div>
 </nav>
 
-<h1 class="text-center mt-5 text-dark">Come help us build the<br> education the world<br> deserves</h1>
+<h1 class="bg-warning text-center mt-5 text-dark">Come help us build the<br> education the world<br> deserves</h1>
 
 <div class="container">
 <div class="row">
@@ -57,11 +57,52 @@
 </div>	
 </div>
 
-<div class="mt-5 text-center">
+<div class="bg-warning mt-5 text-center">
 	<h1>Want to write about us?</h1>
 <h2 >Email us at </h2> 
 <a href="" class="text-white d-inline-block">press@FictionsAcademy.com</a>
 </div>
+
+ <dir class="container">
+<footer class="bg-secondary row  mt-5 text-white">
+	<div class="col-3"><h5>FICTIONACADEMY</h5>
+     <a href="file:///C:/Users/ali/Desktop/my%20E-com%20of%20website/mypro/Aboute.html" class="text-decoration-none text-white bg-dark ">Aboute</a><br>
+      <a href="" class=" text-decoration-none text-white bg-dark ">For Business</a>
+      <br>
+      <a href="" class=" text-decoration-none text-white bg-dark ">Shope</a>
+      <br>
+      <a href="" class=" text-decoration-none text-white bg-dark ">Stories</a>
+      <br>
+      <a href="" class=" text-decoration-none text-white bg-dark ">For Business</a>
+	</div>
+	<div class="col-3"><h5>CATALOG</h5>
+       <p class="mt-4">BY SUBJECT</p>
+      <a href="" class=" text-decoration-none text-white bg-dark ">Programing</a>
+      <br>
+      <a href="" class=" text-decoration-none text-white bg-dark ">Desine</a>
+      <br>
+      <a href="" class=" text-decoration-none text-white bg-dark ">Marketin</a>
+      <br>
+      <a href="" class=" text-decoration-none text-white bg-dark ">For Business</a>
+	</div>
+	<div class="col-3">
+		<p class="mt-5">BY LANGUAGE</p>
+		<a href="" class=" text-decoration-none text-white bg-dark ">HTML</a>
+      <br>
+      <a href="" class=" text-decoration-none text-white bg-dark ">CSS</a>
+      <br>
+      <a href="" class=" text-decoration-none text-white bg-dark ">JavaScript</a>
+      <br>
+      <a href="" class=" text-decoration-none text-white bg-dark ">JQueryUI</a>
+	</div>
+	<div class="col-3">
+		<br><br>
+		<a href="" class=" text-decoration-none text-white bg-dark ">PHP</a>
+      <br>
+      <a href="" class="  text-decoration-none text-white bg-dark ">JQuery</a>
+	</div>
+</footer>
+</dir>
 
 </body>
 </html>
