--- a/signup.html
+++ b/signup.html
@@ -14,17 +14,13 @@
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
 
 	<script type="text/javascript" src="js/bootstrap.js"></script>
-
-	<title>
-		Login| Fictions Academy
-	</title>
+	<title></title>
 </head>
 <body>
 <img class="position-fixed" src="images/behind.jpg" height="1000" width="120">
 <img class="pos " src="images/log3.jpg" height="120" width="120">
 <img class="position-fixed " src="images/log3.jpg" height="120" width="120">
 <img class="book " src="images/books.jpg" height="1000" width="120">
-
 
 <nav class="bg-warning container navbar">
   <a class="navbar-brand" href="file:///C:/Users/ali/Desktop/my%20E-com%20of%20website/mypro/index.html">
@@ -45,39 +41,8 @@
 </div>
 
 <div><a href="file:///C:/Users/ali/Desktop/my%20E-com%20of%20website/mypro/Aboute.html" class="navbar-brand ffam ">  Aboute</a></div> 
-<div class=""><a href="" class="navbar-brand"><span class="ffam">Log in</span></a></div>
-<div class=""><a href="file:///C:/Users/ali/Desktop/my%20E-com%20of%20website/mypro/signup.html" class="navbar-brand"><span class="ffam bg-dark">Sign up</span></a></div>
+
+<div class=""><a href="" class="navbar-brand"><span class="ffam bg-dark">Sign up</span></a></div>
 </nav>
-
-
-<div class="row container">
-
-	<div class="col-5"></div>
-
-<div class="text-center mt-5 text-white col-5">
-<h2>Log In to FictionsAcademy</h2>
-<form >
-  <div class="form-group">
-    <label for="exampleInputEmail1">Email address</label>
-    <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" required>
-    <small id="emailHelp" class="form-text">We'll never share your email with anyone else.</small>
-  </div>
-  <div class="form-group">
-    <label for="exampleInputPassword1">Password</label>
-    <input type="password" class="form-control" id="exampleInputPassword1" required>
-  </div>
-  <div class="form-group form-check">
-    <input type="checkbox" class="form-check-input" id="exampleCheck1">
-    <label class="form-check-label" for="exampleCheck1">Check me out</label>
-  </div>
-  <button type="submit" class="btn btn-primary">Login</button>
-</form>
-<div class="mt-5"><p>Log In with Another Account</p></div>
-<div class="mt-3"><a href=""><i class="fab fa-mailchimp"></i></a><a href=""><i class="fab fa-github-alt"></a></i> <a href=""><i class="fab fa-facebook-f"></a></i></div>
-</div>
-
-<div class="col-2"></div>
-
-</div>
 </body>
 </html>
